WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70062
[Mac] Wheel event handler counter is incorrect with PDF views
https://bugs.webkit.org/show_bug.cgi?id=70062
Summary
[Mac] Wheel event handler counter is incorrect with PDF views
Alexey Proskuryakov
Reported
2011-10-13 15:11:01 PDT
Just wrong. Not sure what the release mode symptom is, but an assertion does fail.
Attachments
proposed fix
(4.31 KB, patch)
2011-10-13 15:13 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-10-13 15:13:51 PDT
Created
attachment 110915
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-10-13 15:24:45 PDT
Committed <
http://trac.webkit.org/changeset/97411
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug