        [Mac] Wheel event handler counter is incorrect with PDF views         https://bugs.webkit.org/show_bug.cgi?id=70062

Reviewed by Dan Bernstein.

        * WebProcess/Plugins/PDF/BuiltInPDFView.h:
        * WebProcess/Plugins/PDF/BuiltInPDFView.cpp:
        (WebKit::BuiltInPDFView::didAddVerticalScrollbar): Added forgotten override for vertical case.
        (WebKit::BuiltInPDFView::willRemoveVerticalScrollbar): Ditto.
        (WebKit::BuiltInPDFView::createScrollbar): Notify self, do not make a shortcut to ScrollAnimator.
        (WebKit::BuiltInPDFView::destroyScrollbar): Ditto.
        (WebKit::BuiltInPDFView::destroy): Actually destroy the scrollbars.



Canonical link: https://commits.webkit.org/86140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97411 268f45cc-cd09-0410-ab3c-d52691b4dbfc