Source/WebKit2/WebProcess/Plugins/PDF/BuiltInPDFView.h
@@ -56,6 +56,8 @@ private:
     void updateScrollbars();
     void didAddHorizontalScrollbar(WebCore::Scrollbar*);
     void willRemoveHorizontalScrollbar(WebCore::Scrollbar*);
+    void didAddVerticalScrollbar(WebCore::Scrollbar*);
+    void willRemoveVerticalScrollbar(WebCore::Scrollbar*);
     PassRefPtr<WebCore::Scrollbar> createScrollbar(WebCore::ScrollbarOrientation);
     void destroyScrollbar(WebCore::ScrollbarOrientation);
     void pdfDocumentDidLoad();
